crates/ruff_linter/src/rules/refurb/snapshots/ruff_linter__rules__refurb__tests__FURB105_FURB105.py.snap
---
source: crates/ruff_linter/src/rules/refurb/mod.rs
---
FURB105 [*] Unnecessary empty string passed to `print`
 --> FURB105.py:3:1
  |
1 | # Errors.
2 |
3 | print("")
  | ^^^^^^^^^
4 | print("", sep=",")
5 | print("", end="bar")
  |
help: Remove empty string
  |
3 - print("")
3 + print()
  |

FURB105 [*] Unnecessary empty string and separator passed to `print`
 --> FURB105.py:4:1
  |
3 | print("")
4 | print("", sep=",")
  | ^^^^^^^^^^^^^^^^^^
5 | print("", end="bar")
6 | print("", sep=",", end="bar")
  |
help: Remove empty string and separator
  |
4 - print("", sep=",")
4 + print()
  |

FURB105 [*] Unnecessary empty string passed to `print`
 --> FURB105.py:5:1
  |
3 | print("")
4 | print("", sep=",")
5 | print("", end="bar")
  | ^^^^^^^^^^^^^^^^^^^^
6 | print("", sep=",", end="bar")
7 | print(sep="")
  |
help: Remove empty string
  |
5 - print("", end="bar")
5 + print(end="bar")
  |

FURB105 [*] Unnecessary empty string and separator passed to `print`
 --> FURB105.py:6:1
  |
4 | print("", sep=",")
5 | print("", end="bar")
6 | print("", sep=",", end="bar")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 | print(sep="")
8 | print("", sep="")
  |
help: Remove empty string and separator
  |
6 - print("", sep=",", end="bar")
6 + print(end="bar")
  |

FURB105 [*] Unnecessary separator passed to `print`
 --> FURB105.py:7:1
  |
5 | print("", end="bar")
6 | print("", sep=",", end="bar")
7 | print(sep="")
  | ^^^^^^^^^^^^^
8 | print("", sep="")
9 | print("", "", sep="")
  |
help: Remove separator
  |
7 - print(sep="")
7 + print()
  |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:8:1
   |
 6 | print("", sep=",", end="bar")
 7 | print(sep="")
 8 | print("", sep="")
   | ^^^^^^^^^^^^^^^^^
 9 | print("", "", sep="")
10 | print("", "", sep="", end="")
   |
help: Remove empty string and separator
  |
8 - print("", sep="")
8 + print()
  |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:9:1
   |
 7 | print(sep="")
 8 | print("", sep="")
 9 | print("", "", sep="")
   | ^^^^^^^^^^^^^^^^^^^^^
10 | print("", "", sep="", end="")
11 | print("", "", sep="", end="bar")
   |
help: Remove empty string and separator
  |
9 - print("", "", sep="")
9 + print()
  |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:10:1
   |
 8 | print("", sep="")
 9 | print("", "", sep="")
10 | print("", "", sep="", end="")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 | print("", "", sep="", end="bar")
12 | print("", sep="", end="bar")
   |
help: Remove empty string and separator
   |
10 - print("", "", sep="", end="")
10 + print(end="")
   |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:11:1
   |
 9 | print("", "", sep="")
10 | print("", "", sep="", end="")
11 | print("", "", sep="", end="bar")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 | print("", sep="", end="bar")
13 | print(sep="", end="bar")
   |
help: Remove empty string and separator
   |
11 - print("", "", sep="", end="bar")
11 + print(end="bar")
   |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:12:1
   |
10 | print("", "", sep="", end="")
11 | print("", "", sep="", end="bar")
12 | print("", sep="", end="bar")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 | print(sep="", end="bar")
14 | print("", "foo", sep="")
   |
help: Remove empty string and separator
   |
12 - print("", sep="", end="bar")
12 + print(end="bar")
   |

FURB105 [*] Unnecessary separator passed to `print`
  --> FURB105.py:13:1
   |
11 | print("", "", sep="", end="bar")
12 | print("", sep="", end="bar")
13 | print(sep="", end="bar")
   | ^^^^^^^^^^^^^^^^^^^^^^^^
14 | print("", "foo", sep="")
15 | print("foo", "", sep="")
   |
help: Remove separator
   |
13 - print(sep="", end="bar")
13 + print(end="bar")
   |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:14:1
   |
12 | print("", sep="", end="bar")
13 | print(sep="", end="bar")
14 | print("", "foo", sep="")
   | ^^^^^^^^^^^^^^^^^^^^^^^^
15 | print("foo", "", sep="")
16 | print("foo", "", "bar", sep="")
   |
help: Remove empty string and separator
   |
14 - print("", "foo", sep="")
14 + print("foo")
   |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:15:1
   |
13 | print(sep="", end="bar")
14 | print("", "foo", sep="")
15 | print("foo", "", sep="")
   | ^^^^^^^^^^^^^^^^^^^^^^^^
16 | print("foo", "", "bar", sep="")
17 | print("", *args)
   |
help: Remove empty string and separator
   |
15 - print("foo", "", sep="")
15 + print("foo")
   |

FURB105 [*] Unnecessary empty string passed to `print`
  --> FURB105.py:16:1
   |
14 | print("", "foo", sep="")
15 | print("foo", "", sep="")
16 | print("foo", "", "bar", sep="")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
17 | print("", *args)
18 | print("", *args, sep="")
   |
help: Remove empty string
   |
16 - print("foo", "", "bar", sep="")
16 + print("foo", "bar", sep="")
   |

FURB105 [*] Unnecessary empty string passed to `print`
  --> FURB105.py:18:1
   |
16 | print("foo", "", "bar", sep="")
17 | print("", *args)
18 | print("", *args, sep="")
   | ^^^^^^^^^^^^^^^^^^^^^^^^
19 | print("", **kwargs)
20 | print(sep="\t")
   |
help: Remove empty string
   |
18 - print("", *args, sep="")
18 + print(*args, sep="")
   |

FURB105 [*] Unnecessary empty string passed to `print`
  --> FURB105.py:19:1
   |
17 | print("", *args)
18 | print("", *args, sep="")
19 | print("", **kwargs)
   | ^^^^^^^^^^^^^^^^^^^
20 | print(sep="\t")
21 | print(sep=print(1))
   |
help: Remove empty string
   |
19 - print("", **kwargs)
19 + print(**kwargs)
   |

FURB105 [*] Unnecessary separator passed to `print`
  --> FURB105.py:20:1
   |
18 | print("", *args, sep="")
19 | print("", **kwargs)
20 | print(sep="\t")
   | ^^^^^^^^^^^^^^^
21 | print(sep=print(1))
22 | print(f"")
   |
help: Remove separator
   |
20 - print(sep="\t")
20 + print()
   |

FURB105 [*] Unnecessary separator passed to `print`
  --> FURB105.py:21:1
   |
19 | print("", **kwargs)
20 | print(sep="\t")
21 | print(sep=print(1))
   | ^^^^^^^^^^^^^^^^^^^
22 | print(f"")
23 | print(f"", sep=",")
   |
help: Remove separator
   |
21 - print(sep=print(1))
21 + print()
   |
note: This is an unsafe fix and may change runtime behavior

FURB105 [*] Unnecessary empty string passed to `print`
  --> FURB105.py:22:1
   |
20 | print(sep="\t")
21 | print(sep=print(1))
22 | print(f"")
   | ^^^^^^^^^^
23 | print(f"", sep=",")
24 | print(f"", end="bar")
   |
help: Remove empty string
   |
22 - print(f"")
22 + print()
   |

FURB105 [*] Unnecessary empty string and separator passed to `print`
  --> FURB105.py:23:1
   |
21 | print(sep=print(1))
22 | print(f"")
23 | print(f"", sep=",")
   | ^^^^^^^^^^^^^^^^^^^
24 | print(f"", end="bar")
25 | print(1, sep=None)
   |
help: Remove empty string and separator
   |
23 - print(f"", sep=",")
23 + print()
   |

FURB105 [*] Unnecessary empty string passed to `print`
  --> FURB105.py:24:1
   |
22 | print(f"")
23 | print(f"", sep=",")
24 | print(f"", end="bar")
   | ^^^^^^^^^^^^^^^^^^^^^
25 | print(1, sep=None)
   |
help: Remove empty string
   |
24 - print(f"", end="bar")
24 + print(end="bar")
   |

FURB105 [*] Unnecessary separator passed to `print`
  --> FURB105.py:25:1
   |
23 | print(f"", sep=",")
24 | print(f"", end="bar")
25 | print(1, sep=None)
   | ^^^^^^^^^^^^^^^^^^
26 |
27 | def p(sep):
   |
help: Remove separator
   |
25 - print(1, sep=None)
25 + print(1)
   |

FURB105 [*] Unnecessary separator passed to `print`
  --> FURB105.py:28:5
   |
27 | def p(sep):
28 |     print(1, sep=sep)
   |     ^^^^^^^^^^^^^^^^^
29 |
30 | # OK.
   |
help: Remove separator
   |
28 -     print(1, sep=sep)
28 +     print(1)
   |
note: This is an unsafe fix and may change runtime behavior

FURB105 [*] Unnecessary empty string passed to `print`
  --> FURB105.py:46:1
   |
46 | / print(
47 | |     # text
48 | |     ""
49 | | )
   | |_^
help: Remove empty string
   |
46 - print(
47 -     # text
48 -     ""
49 - )
46 + print()
   |
note: This is an unsafe fix and may change runtime behavior
